<resources>
    <string name="app_name">Trabalho Final</string>

    <string name="navigation_jogar_dado">Jogar Dado</string>
    <string name="navigation_jogar_xadrez">Jogar Xadrez</string>
    <string name="navigation_jogar_xadrez2">Jogar Xadrez 2</string>
    <string name="navigation_jogar_quiz">Jogar Quiz</string>
    <string name="title_activity_parametros_xadrez">Parâmetros Xadrez</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_crono_xadrez">CronoXadrezActivity</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="player2">Jogador 2</string>
    <string name="player1">Jogador 1</string>
    <string name="tempoJogo">Tempo (minutos)</string>
    <string name="change_button">Finaliza Jogada</string>

    <string name="iniciar">INICIAR</string>
    <string name="parar">PARAR</string>
    <string name="reiniciar">REINICIAR</string>
    <string name="perdeu">Perdeu</string>
    <string name="ganhou">Ganhou</string>
    <string name="trocar">TROCAR</string>
    <string name="quiz_text_easy">Fácil</string>
    <string name="quiz_text_hard">Difícil</string>
    <string name="quiz_text_continua">Difícil</string>
    <string name="quiz_text_dificuldade">Escolha a dificuldade...</string>


    <string name="INTENT_JOGAR_DADO">0</string>
    <string name="INTENT_CONFIGURACAO_XADREZ">1</string>
    <string name="INTENT_JOGAR_QUIZ">2</string>
    <string name="KEY_ROOT">racas</string>
    <string name="KEY_OPTION">item</string>
    <string name="KEY_ID">id</string>
    <string name="KEY_TITULO">titulo</string>
    <string name="KEY_FONTE">developer</string>
    <string name="KEY_DETALHES">detalhe</string>
    <string name="KEY_DURATION">duration</string>
    <string name="KEY_IMAGEM">thumb_url</string>
    <string name="KEY_LINK">link</string>
    <string name="KEY_DICA1">dica1</string>
    <string name="KEY_DICA2">dica2</string>
    <string name="KEY_DICA3">dica3</string>

</resources>
