<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="br.edu.ifspsaocarlos.sdm.trabalhofinal.activity.JogoXadrezActivity">

    <LinearLayout
        android:id="@+id/frame_controls"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/nav_header_height"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtJogador1" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtJogador2"/>

<<<<<<< HEAD
        <TextView style="@style/Widget.DescriptionBar"
=======
        <TextView
            android:id="@+id/textView4"
>>>>>>> 315cea18a2d92afb49083bd375b259d9f7d19710
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tempoJogo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtTempo"
            android:selectAllOnFocus="true" />


<<<<<<< HEAD
        <LinearLayout style="?android:buttonBarStyle"
=======
        <LinearLayout
>>>>>>> 315cea18a2d92afb49083bd375b259d9f7d19710
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal">

<<<<<<< HEAD
            <Button style="?android:buttonBarButtonStyle"
                android:id="@+id/start_button"
                android:layout_width="0dp"
=======
            <Button android:id="@+id/start_button"
                android:layout_width="match_parent"
>>>>>>> 315cea18a2d92afb49083bd375b259d9f7d19710
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_button" />

<<<<<<< HEAD
            <Button style="?android:buttonBarButtonStyle"
                android:id="@+id/pause_button"
                android:layout_width="0dp"
=======
            <Button android:id="@+id/pause_button"
                android:layout_width="match_parent"
>>>>>>> 315cea18a2d92afb49083bd375b259d9f7d19710
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pause_button" />

<<<<<<< HEAD
            <Button style="?android:buttonBarButtonStyle"
                android:id="@+id/stop_button"
                android:layout_width="0dp"
=======
            <Button android:id="@+id/stop_button"
                android:layout_width="match_parent"
>>>>>>> 315cea18a2d92afb49083bd375b259d9f7d19710
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_button" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_preview"
        style="?metaButtonBarStyle"
<<<<<<< HEAD
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
=======
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>>>>>>> 315cea18a2d92afb49083bd375b259d9f7d19710
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        android:keepScreenOn="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/header_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/waiting_player"
                android:layout_width="wrap_content"
<<<<<<< HEAD
                android:layout_height="wrap_content"
                android:text="@string/stop_button" />

        </LinearLayout>
        
        <View
            android:id="@+id/floating_shape"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_huge"
            android:background="@drawable/shape"
            android:elevation="@dimen/margin_large"
            android:layout_gravity="center"/>


        <TextClock
            android:id="@+id/running_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium" />

=======
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextClock
            android:id="@+id/running_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button android:id="@+id/action_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change_button" />
>>>>>>> 315cea18a2d92afb49083bd375b259d9f7d19710

    </FrameLayout>


</FrameLayout>
